crates/parser/src/snapshots/parser__tests__parse_inline_ok@0130_associativity_dir_right.ath.snap
---
source: crates/parser/src/tests.rs
description: "right-assoc Foo\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0130_associativity_dir_right.ath
---
ASSOCIATIVITY_DIR
  RIGHT_ASSOC_KW "right-assoc"
  WHITESPACE " "
  IDENTIFIER
    IDENT "Foo"
  WHITESPACE "\n"

