crates/parser/src/snapshots/parser__tests__parse_inline_ok@0131_associativity_dir_left.ath.snap
---
source: crates/parser/src/tests.rs
description: "left-assoc Foo\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0131_associativity_dir_left.ath
---
ASSOCIATIVITY_DIR
  LEFT_ASSOC_KW "left-assoc"
  WHITESPACE " "
  NAME_REF
    IDENT "Foo"
  WHITESPACE "\n"

