crates/parser/src/snapshots/parser__tests__parse_inline_ok@0133_infer_block_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "{\n  foo := A from B, C;\n  bar := D by E on F, G;\n  baz:(OP 2) := (!claim X);\n  (!claim Z)\n}\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0133_infer_block_ded.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE "\n  "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      IDENTIFIER
        IDENT "foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    INFERENCE
      INFER_FROM
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
        WHITESPACE " "
        FROM_KW "from"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "B"
        COMMA ","
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "C"
  SEMI ";"
  WHITESPACE "\n  "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      IDENTIFIER
        IDENT "bar"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    INFERENCE
      INFER_BY
        IDENT_EXPR
          IDENTIFIER
            IDENT "D"
        WHITESPACE " "
        BY_KW "by"
        WHITESPACE " "
        IDENT_EXPR
          IDENTIFIER
            IDENT "E"
        WHITESPACE " "
        ON_KW "on"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "F"
        COMMA ","
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "G"
  SEMI ";"
  WHITESPACE "\n  "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      OP_ANNOTATED_PARAM
        IDENTIFIER
          IDENT "baz"
        COLON ":"
        L_PAREN "("
        O_P_KW "OP"
        WHITESPACE " "
        IDENTIFIER
          IDENT "2"
        R_PAREN ")"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    INFERENCE
      BANG_METHOD_CALL_DED
        L_PAREN "("
        BANG "!"
        IDENT_EXPR
          IDENTIFIER
            IDENT "claim"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "X"
        R_PAREN ")"
  SEMI ";"
  WHITESPACE "\n  "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      BANG_METHOD_CALL_DED
        L_PAREN "("
        BANG "!"
        IDENT_EXPR
          IDENTIFIER
            IDENT "claim"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "Z"
        R_PAREN ")"
  WHITESPACE "\n"
  R_CURLY "}"
  WHITESPACE "\n"

