crates/parser/src/snapshots/parser__tests__parse_inline_ok@0136_infer_from.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A from B }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0136_infer_from.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      INFER_FROM
        IDENT_EXPR
          NAME_REF
            IDENT "A"
        WHITESPACE " "
        FROM_KW "from"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "B"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

