crates/parser/src/snapshots/parser__tests__parse_inline_ok@0138_infer_from_multiple.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A from B, C }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0138_infer_from_multiple.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      INFER_FROM
        IDENT_EXPR
          NAME_REF
            IDENT "A"
        WHITESPACE " "
        FROM_KW "from"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "B"
        COMMA ","
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "C"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

