crates/parser/src/snapshots/parser__tests__parse_inline_ok@0139_named_inference_closest_lookahead.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A := (!claim B) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0139_named_inference_closest_lookahead.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      IDENTIFIER
        IDENT "A"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    INFERENCE
      BANG_METHOD_CALL_DED
        L_PAREN "("
        BANG "!"
        IDENT_EXPR
          IDENTIFIER
            IDENT "claim"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "B"
        R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

